2008-03-10 Jens Persson

    * Make it validate as HTML-4.01
    * Added Videomixer chapter
    * Added Mike Auty as the winner in the first competition
    * Various other fixes

2006-12-29  Jens Persson

    * Added Capabilities chapter
    * Various other fixes
    
2006-12-19  Jens Persson

    * Added Seeking chapter
    
2006-12-17  Jens Persson
    
    * Added chapter about sinks and stuff
    * Various other fixes

2006-12-16  Jens Persson
    
    * Added Pipeline chapter
    * Updated introduction

2006-12-15  Jens Persson
    
    * Initial release