@@ -84,9 +84,9 @@
   Install from Subversion, eg pygst-reference (you will need docbook-xml and docbook-xsl):
   <div class="code">svn co svn://svn.berlios.de/pygstdocs/trunk/pygst-reference
 cd pygst-reference
-make
-  </div>
-  You should now be able to read pygst-reference/index.html in your browser.
+make</div>
+  You should now be able to read pygst-reference/index.html in your browser. If you want to enjoy syntax
+  highlighting in the tutorials you'll have to install <a href="http://www.pygments.org">Pygments</a> as well.
 </div>
 
 <h2 id="projects">Projects</h2>
@@ -96,6 +96,8 @@ make
   <a href="http://fuplayer.org/">FUPlayer</a><br />
   <a href="http://www.jokosher.org/">Jokosher</a><br />
   <a href="http://listengnome.free.fr/">Listen</a><br />
+  <a href="https://garage.maemo.org/projects/panucci/">Panucci</a> - resuming audiobook player <br />
+  <a href="http://projects.rudd-o.com/radio-jockey">Radio Jockey</a> - the Internet radio broadcaster<br />
   <a href="http://www.sacredchao.net/quodlibet">Quodlibet</a>
 </div>
  
